<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlVitrum"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tvLatLon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" />

    <ProgressBar
        android:id="@+id/pbWait"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/tvGettingLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pbWait"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/eight_dp_margin"
        android:text="@string/getting_location" />

    <TextView
        android:id="@+id/tvTapToChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvGettingLocation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/four_dp_margin"
        android:text="@string/tap_to_change_radius" />

    <TextView
        android:id="@+id/tvMilesRadius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/n_miles_radius"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvSwipeToSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvMilesRadius"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/four_dp_margin"
        android:text="@string/swipe_to_set_radius"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvTapToSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMilesRadius"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/four_dp_margin"
        android:text="@string/tap_again_to_set"
        android:visibility="invisible" />

</RelativeLayout>
